[package]
name = "scx_imperator"
version = "1.0.3"
authors = ["Michael Sebero"]
edition = "2021"
description = ""
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
libbpf-rs = "=0.26.1"
libc = "0.2.180"
log = "0.4"
env_logger = "0.11"
ratatui = { version = "0.30" }
crossterm = "0.29"
arboard = "3.6"

scx_utils = { git = "https://github.com/sched-ext/scx", branch = "main", version = "1.0.26" }
core_affinity = "0.8"
quanta = "0.12"
crossbeam-utils = "0.8"
tachyonfx = "0.22.0"
nix = { version = "0.30", features = ["signal", "poll"] }

[build-dependencies]
scx_cargo = { git = "https://github.com/sched-ext/scx", branch = "main", version = "1.0.27" }

[[bin]]
name = "scx_imperator"
path = "src/main.rs"
